update the nearest neighbor comparisons

--- a/notebooks/NN Tests/NN Tree 15F Comparison.ipynb
+++ b/notebooks/NN Tests/NN Tree 15F Comparison.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "from sklearn.neighbors import KDTree\n",
     "from sklearn.neighbors import BallTree\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.datasets import make_blobs\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -18,8 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = make_blobs(n_samples=10000, centers=10, n_features=99999, random_state=0)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
+    "X, y = make_blobs(n_samples=50000, centers=10, n_features=15, random_state=0)"
    ]
   },
   {
@@ -31,17 +31,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(99999,)\n",
-      "99999\n"
+      "(15,)\n",
+      "15\n"
      ]
     }
    ],
    "source": [
-    "# print(X_test[:1].shape)\n",
-    "# print(X_test[:1])\n",
     "# get row 50\n",
-    "print(X_test[50, :].shape)\n",
-    "print(len(X_test[50, :]))\n",
+    "print(X[50, :].shape)\n",
+    "print(len(X[50, :]))\n",
     "# print(X_test[50, :])"
    ]
   },
@@ -71,14 +69,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 11s, sys: 14 s, total: 1min 25s\n",
-      "Wall time: 1min 46s\n"
+      "CPU times: user 2.25 ms, sys: 1.55 ms, total: 3.8 ms\n",
+      "Wall time: 1.97 ms\n"
      ]
     }
    ],
    "source": [
-    "# 40 is a scikit-learn default and also found in hdbscan module for tree construction\n",
-    "%time kdtree = KDTree(X_train, leaf_size=40)"
+    "%time nn = NearestNeighbors(n_neighbors=5, algorithm='brute').fit(X)"
    ]
   },
   {
@@ -90,15 +87,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 168 ms, sys: 13.3 ms, total: 181 ms\n",
-      "Wall time: 207 ms\n",
-      "[[6739  782 7851 4146 5229]]\n"
+      "CPU times: user 50.7 s, sys: 16 s, total: 1min 6s\n",
+      "Wall time: 56.4 s\n",
+      "50000\n"
      ]
     }
    ],
    "source": [
-    "%time dist, ind = kdtree.query(X_test[50:51], k=5)\n",
-    "print(ind)"
+    "%time dist, ind = nn.kneighbors(X)\n",
+    "print(len(ind))"
    ]
   },
   {
@@ -117,13 +114,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 8s, sys: 679 ms, total: 1min 9s\n",
-      "Wall time: 1min 10s\n"
+      "CPU times: user 82 ms, sys: 3.73 ms, total: 85.8 ms\n",
+      "Wall time: 86.9 ms\n"
      ]
     }
    ],
    "source": [
-    "%time balltree = BallTree(X_train, leaf_size=40)"
+    "# 40 is a scikit-learn default and also found in hdbscan module for tree construction\n",
+    "%time kdtree = KDTree(X, leaf_size=40)"
    ]
   },
   {
@@ -135,15 +133,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 170 ms, sys: 4.45 ms, total: 174 ms\n",
-      "Wall time: 177 ms\n",
-      "[[6739  782 7851 4146 5229]]\n"
+      "CPU times: user 15.6 s, sys: 56 ms, total: 15.7 s\n",
+      "Wall time: 15.8 s\n",
+      "50000\n"
      ]
     }
    ],
    "source": [
-    "%time dist, ind = balltree.query(X_test[50:51], k=5)\n",
-    "print(ind)"
+    "%time dist, ind = kdtree.query(X, k=5)\n",
+    "print(len(ind))"
    ]
   },
   {
@@ -152,6 +150,44 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 89.7 ms, sys: 3.92 ms, total: 93.7 ms\n",
+      "Wall time: 95.1 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time balltree = BallTree(X, leaf_size=40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 26.6 s, sys: 120 ms, total: 26.8 s\n",
+      "Wall time: 27 s\n",
+      "50000\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time dist, ind = balltree.query(X, k=5)\n",
+    "print(len(ind))"
+   ]
   }
  ],
  "metadata": {
