--- a/notebooks/NN Tests/NN Tree 30F Comparison.ipynb
+++ b/notebooks/NN Tests/NN Tree 30F Comparison.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "from sklearn.neighbors import KDTree\n",
     "from sklearn.neighbors import BallTree\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.datasets import make_blobs\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -18,8 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = make_blobs(n_samples=200000, centers=10, n_features=999, random_state=0)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
+    "X, y = make_blobs(n_samples=50000, centers=10, n_features=30, random_state=0)"
    ]
   },
   {
@@ -31,17 +31,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(999,)\n",
-      "999\n"
+      "(30,)\n",
+      "30\n"
      ]
     }
    ],
    "source": [
-    "# print(X_test[:1].shape)\n",
-    "# print(X_test[:1])\n",
     "# get row 50\n",
-    "print(X_test[50, :].shape)\n",
-    "print(len(X_test[50, :]))\n",
+    "print(X[50, :].shape)\n",
+    "print(len(X[50, :]))\n",
     "# print(X_test[50, :])"
    ]
   },
@@ -71,14 +69,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 30.3 s, sys: 297 ms, total: 30.6 s\n",
-      "Wall time: 30.8 s\n"
+      "CPU times: user 3.12 ms, sys: 657 µs, total: 3.78 ms\n",
+      "Wall time: 4.86 ms\n"
      ]
     }
    ],
    "source": [
-    "# 40 is a scikit-learn default and also found in hdbscan module for tree construction\n",
-    "%time kdtree = KDTree(X_train, leaf_size=40)"
+    "%time nn = NearestNeighbors(n_neighbors=5, algorithm='brute').fit(X)"
    ]
   },
   {
@@ -90,15 +87,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 33 ms, sys: 2.63 ms, total: 35.6 ms\n",
-      "Wall time: 36 ms\n",
-      "[[ 71079 123227  70690  81492  59409]]\n"
+      "CPU times: user 51.9 s, sys: 15.9 s, total: 1min 7s\n",
+      "Wall time: 57.4 s\n",
+      "50000\n"
      ]
     }
    ],
    "source": [
-    "%time dist, ind = kdtree.query(X_test[50:51], k=5)\n",
-    "print(ind)"
+    "%time dist, ind = nn.kneighbors(X)\n",
+    "print(len(ind))"
    ]
   },
   {
@@ -117,14 +114,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 30.6 s, sys: 239 ms, total: 30.8 s\n",
-      "Wall time: 31 s\n"
+      "CPU times: user 156 ms, sys: 4.85 ms, total: 161 ms\n",
+      "Wall time: 164 ms\n"
      ]
     }
    ],
    "source": [
-    "%time balltree = BallTree(X_train, leaf_size=40)"
+    "# 40 is a scikit-learn default and also found in hdbscan module for tree construction\n",
+    "%time kdtree = KDTree(X, leaf_size=40)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 30.4 s, sys: 103 ms, total: 30.5 s\n",
+      "Wall time: 30.7 s\n",
+      "50000\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time dist, ind = kdtree.query(X, k=5)\n",
+    "print(len(ind))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -135,23 +160,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 24.2 ms, sys: 2.03 ms, total: 26.3 ms\n",
-      "Wall time: 27.7 ms\n",
-      "[[ 71079 123227  70690  81492  59409]]\n"
+      "CPU times: user 176 ms, sys: 5.8 ms, total: 182 ms\n",
+      "Wall time: 193 ms\n"
      ]
     }
    ],
    "source": [
-    "%time dist, ind = balltree.query(X_test[50:51], k=5)\n",
-    "print(ind)"
+    "%time balltree = BallTree(X, leaf_size=40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 51.1 s, sys: 207 ms, total: 51.3 s\n",
+      "Wall time: 52.1 s\n",
+      "50000\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time dist, ind = balltree.query(X, k=5)\n",
+    "print(len(ind))"
+   ]
   }
  ],
  "metadata": {
