--- a/notebooks/NN Tests/NN Tree 6F Comparison.ipynb
+++ b/notebooks/NN Tests/NN Tree 6F Comparison.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = make_blobs(n_samples=100000, centers=10, n_features=3, random_state=0)"
+    "X, y = make_blobs(n_samples=50000, centers=10, n_features=6, random_state=0)"
    ]
   },
   {
@@ -31,8 +31,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3,)\n",
-      "3\n"
+      "(6,)\n",
+      "6\n"
      ]
     }
    ],
@@ -69,8 +69,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.31 ms, sys: 930 µs, total: 2.24 ms\n",
-      "Wall time: 1.79 ms\n"
+      "CPU times: user 1 ms, sys: 704 µs, total: 1.7 ms\n",
+      "Wall time: 961 µs\n"
      ]
     }
    ],
@@ -87,9 +87,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 5s, sys: 1min, total: 4min 5s\n",
-      "Wall time: 3min 27s\n",
-      "100000\n"
+      "CPU times: user 49.8 s, sys: 15.7 s, total: 1min 5s\n",
+      "Wall time: 55.6 s\n",
+      "50000\n"
      ]
     }
    ],
@@ -114,8 +114,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 70.9 ms, sys: 4.68 ms, total: 75.6 ms\n",
-      "Wall time: 81.6 ms\n"
+      "CPU times: user 37.8 ms, sys: 1.62 ms, total: 39.4 ms\n",
+      "Wall time: 41.1 ms\n"
      ]
     }
    ],
@@ -133,9 +133,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 493 ms, sys: 10.5 ms, total: 503 ms\n",
-      "Wall time: 532 ms\n",
-      "100000\n"
+      "CPU times: user 1.41 s, sys: 15.1 ms, total: 1.42 s\n",
+      "Wall time: 1.45 s\n",
+      "50000\n"
      ]
     }
    ],
@@ -160,8 +160,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 70.1 ms, sys: 4.38 ms, total: 74.5 ms\n",
-      "Wall time: 82 ms\n"
+      "CPU times: user 46.2 ms, sys: 1.53 ms, total: 47.7 ms\n",
+      "Wall time: 52.2 ms\n"
      ]
     }
    ],
@@ -178,9 +178,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.97 s, sys: 16.1 ms, total: 3.99 s\n",
-      "Wall time: 4.02 s\n",
-      "100000\n"
+      "CPU times: user 5.11 s, sys: 24.7 ms, total: 5.14 s\n",
+      "Wall time: 5.19 s\n",
+      "50000\n"
      ]
     }
    ],
