--- a/notebooks/NN Tests/NN Tree 9F Comparison.ipynb
+++ b/notebooks/NN Tests/NN Tree 9F Comparison.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "from sklearn.neighbors import KDTree\n",
     "from sklearn.neighbors import BallTree\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.datasets import make_blobs\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -18,8 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = make_blobs(n_samples=50000, centers=10, n_features=9999, random_state=0)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
+    "X, y = make_blobs(n_samples=50000, centers=10, n_features=9, random_state=0)"
    ]
   },
   {
@@ -31,17 +31,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(9999,)\n",
-      "9999\n"
+      "(9,)\n",
+      "9\n"
      ]
     }
    ],
    "source": [
-    "# print(X_test[:1].shape)\n",
-    "# print(X_test[:1])\n",
     "# get row 50\n",
-    "print(X_test[50, :].shape)\n",
-    "print(len(X_test[50, :]))\n",
+    "print(X[50, :].shape)\n",
+    "print(len(X[50, :]))\n",
     "# print(X_test[50, :])"
    ]
   },
@@ -71,14 +69,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 6s, sys: 1.12 s, total: 1min 7s\n",
-      "Wall time: 1min 8s\n"
+      "CPU times: user 2.01 ms, sys: 201 µs, total: 2.21 ms\n",
+      "Wall time: 2.19 ms\n"
      ]
     }
    ],
    "source": [
-    "# 40 is a scikit-learn default and also found in hdbscan module for tree construction\n",
-    "%time kdtree = KDTree(X_train, leaf_size=40)"
+    "%time nn = NearestNeighbors(n_neighbors=5, algorithm='brute').fit(X)"
    ]
   },
   {
@@ -90,15 +87,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 87.3 ms, sys: 11.2 ms, total: 98.5 ms\n",
-      "Wall time: 107 ms\n",
-      "[[25113  8940    22 23287 21864]]\n"
+      "CPU times: user 50.3 s, sys: 15.9 s, total: 1min 6s\n",
+      "Wall time: 56.2 s\n",
+      "50000\n"
      ]
     }
    ],
    "source": [
-    "%time dist, ind = kdtree.query(X_test[50:51], k=5)\n",
-    "print(ind)"
+    "%time dist, ind = nn.kneighbors(X)\n",
+    "print(len(ind))"
    ]
   },
   {
@@ -117,13 +114,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 4s, sys: 685 ms, total: 1min 5s\n",
-      "Wall time: 1min 5s\n"
+      "CPU times: user 42.7 ms, sys: 1.69 ms, total: 44.4 ms\n",
+      "Wall time: 46.2 ms\n"
      ]
     }
    ],
    "source": [
-    "%time balltree = BallTree(X_train, leaf_size=40)"
+    "# 40 is a scikit-learn default and also found in hdbscan module for tree construction\n",
+    "%time kdtree = KDTree(X, leaf_size=40)"
    ]
   },
   {
@@ -135,15 +133,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 66.3 ms, sys: 3.57 ms, total: 69.9 ms\n",
-      "Wall time: 72.2 ms\n",
-      "[[25113  8940    22 23287 21864]]\n"
+      "CPU times: user 4.08 s, sys: 25.2 ms, total: 4.11 s\n",
+      "Wall time: 4.13 s\n",
+      "50000\n"
      ]
     }
    ],
    "source": [
-    "%time dist, ind = balltree.query(X_test[50:51], k=5)\n",
-    "print(ind)"
+    "%time dist, ind = kdtree.query(X, k=5)\n",
+    "print(len(ind))"
    ]
   },
   {
@@ -152,6 +150,44 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 50.9 ms, sys: 2.74 ms, total: 53.6 ms\n",
+      "Wall time: 52.3 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time balltree = BallTree(X, leaf_size=40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 9.44 s, sys: 86.7 ms, total: 9.52 s\n",
+      "Wall time: 9.8 s\n",
+      "50000\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time dist, ind = balltree.query(X, k=5)\n",
+    "print(len(ind))"
+   ]
   }
  ],
  "metadata": {
