Verify the proposed predition changes that will come in version 4.3

--- a/notebooks/Data Setup/Copy Hdbscan Jars.ipynb
+++ b/notebooks/Data Setup/Copy Hdbscan Jars.ipynb
@@ -18,20 +18,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 19008\r\n",
-      "drwxr-xr-x   7 gstewart  staff      224 Dec 13 16:32 \u001b[34m.\u001b[m\u001b[m\r\n",
-      "drwxr-xr-x  11 gstewart  staff      352 Dec 13 16:49 \u001b[34m..\u001b[m\u001b[m\r\n",
+      "total 36584\r\n",
+      "drwxr-xr-x   8 gstewart  staff      256 Mar 14 21:55 \u001b[34m.\u001b[m\u001b[m\r\n",
+      "drwxr-xr-x  11 gstewart  staff      352 Jan 21 14:50 \u001b[34m..\u001b[m\u001b[m\r\n",
       "-rw-r--r--@  1 gstewart  staff     6148 Nov 29 21:51 .DS_Store\r\n",
-      "-rw-r--r--   1 gstewart  staff   174598 Sep 10 14:50 junit-jupiter-api-5.7.0.jar\r\n",
-      "-rw-r--r--   1 gstewart  staff    99606 Jul 14 22:31 junit-platform-commons-1.7.1.jar\r\n",
-      "-rw-r--r--   1 gstewart  staff     7653 Jul 14 22:31 opentest4j-1.2.0.jar\r\n",
-      "-rw-r--r--   1 gstewart  staff  8996892 Dec 13 16:52 tribuo-clustering-hdbscan-4.2.0-SNAPSHOT-jar-with-dependencies.jar\r\n"
+      "-rw-r--r--   1 gstewart  staff   174598 Sep 10  2021 junit-jupiter-api-5.7.0.jar\r\n",
+      "-rw-r--r--   1 gstewart  staff    99606 Jul 14  2021 junit-platform-commons-1.7.1.jar\r\n",
+      "-rw-r--r--   1 gstewart  staff     7653 Jul 14  2021 opentest4j-1.2.0.jar\r\n",
+      "-rw-r--r--   1 gstewart  staff  8996892 Jan 21 14:50 tribuo-clustering-hdbscan-4.2.0-SNAPSHOT-jar-with-dependencies.jar\r\n",
+      "-rw-r--r--   1 gstewart  staff  9007670 Mar 15 15:26 tribuo-clustering-hdbscan-4.3.0-SNAPSHOT-jar-with-dependencies.jar\r\n"
      ]
     }
    ],
    "source": [
     "!ls -al ../../jars"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
