Update the project to use version 4.3.0 of Tribuo, which demonstrates that Tribuo Hdbscan produces correct results when compared with other implementations. Furthermore, these notebooks show the recommended way to train HDBSCAN* models and use them to make predictions.

--- a/notebooks/Compare Labels and Outlier Scores/Tribuo Unit Tests/Tribuo vs RefImpl Labels and Outlier Scores Tribuo Unit Tests.ipynb
+++ b/notebooks/Compare Labels and Outlier Scores/Tribuo Unit Tests/Tribuo vs RefImpl Labels and Outlier Scores Tribuo Unit Tests.ipynb
@@ -16,7 +16,7 @@
     "%jars ../../../jars/junit-jupiter-api-5.7.0.jar\n",
     "%jars ../../../jars/opentest4j-1.2.0.jar\n",
     "%jars ../../../jars/junit-platform-commons-1.7.1.jar\n",
-    "%jars ../../../jars/tribuo-clustering-hdbscan-4.2.0-SNAPSHOT-jar-with-dependencies.jar"
+    "%jars ../../../jars/tribuo-clustering-hdbscan-4.3.0-jar-with-dependencies.jar"
    ]
   },
   {
@@ -52,6 +52,8 @@
     "import org.tribuo.data.columnar.processors.response.EmptyResponseProcessor;\n",
     "import org.tribuo.data.csv.CSVDataSource;\n",
     "import org.tribuo.data.csv.CSVLoader;\n",
+    "import org.tribuo.math.distance.DistanceType;\n",
+    "import org.tribuo.math.neighbour.NeighboursQueryFactoryType;\n",
     "import org.tribuo.util.Util;"
    ]
   },
@@ -95,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var trainer = new HdbscanTrainer(7, HdbscanTrainer.Distance.EUCLIDEAN, 7,1);\n",
+    "var trainer = new HdbscanTrainer(7, DistanceType.L2.getDistance(), 7, 1, NeighboursQueryFactoryType.BRUTE_FORCE);\n",
     "var model = trainer.train(dataset);"
    ]
   },
