--- a/notebooks/Compare Performance/Credit Card/Tribuo Performance Credit Card.ipynb
+++ b/notebooks/Compare Performance/Credit Card/Tribuo Performance Credit Card.ipynb
@@ -16,7 +16,7 @@
     "%jars ../../../jars/junit-jupiter-api-5.7.0.jar\n",
     "%jars ../../../jars/opentest4j-1.2.0.jar\n",
     "%jars ../../../jars/junit-platform-commons-1.7.1.jar\n",
-    "%jars ../../../jars/tribuo-clustering-hdbscan-4.2.0-SNAPSHOT-jar-with-dependencies.jar"
+    "%jars ../../../jars/tribuo-clustering-hdbscan-4.3.0-jar-with-dependencies.jar"
    ]
   },
   {
@@ -52,6 +52,8 @@
     "import org.tribuo.data.columnar.processors.response.EmptyResponseProcessor;\n",
     "import org.tribuo.data.csv.CSVDataSource;\n",
     "import org.tribuo.data.csv.CSVLoader;\n",
+    "import org.tribuo.math.distance.DistanceType;\n",
+    "import org.tribuo.math.neighbour.NeighboursQueryFactoryType;\n",
     "import org.tribuo.util.Util;"
    ]
   },
@@ -113,12 +115,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took (00:00:04:168)\n"
+      "Training took (00:00:04:864)\n"
      ]
     }
    ],
    "source": [
     "var trainer = new HdbscanTrainer(5, HdbscanTrainer.Distance.EUCLIDEAN, 5, 4);\n",
+    "var trainer = new HdbscanTrainer(5, DistanceType.L2.getDistance(), 5, 4, NeighboursQueryFactoryType.BRUTE_FORCE);\n",
     "var startTime = System.currentTimeMillis();\n",
     "var model = trainer.train(dataset);\n",
     "var endTime = System.currentTimeMillis();\n",
