--- a/notebooks/Compare Predictions/Gaussians 3Centers 4Features/Tribuo 4.3 Predictions 5000C3F4.ipynb
+++ b/notebooks/Compare Predictions/Gaussians 3Centers 4Features/Tribuo 4.3 Predictions 5000C3F4.ipynb
@@ -16,7 +16,7 @@
     "%jars ../../../jars/junit-jupiter-api-5.7.0.jar\n",
     "%jars ../../../jars/opentest4j-1.2.0.jar\n",
     "%jars ../../../jars/junit-platform-commons-1.7.1.jar\n",
-    "%jars ../../../jars/tribuo-clustering-hdbscan-4.3.0-SNAPSHOT-jar-with-dependencies.jar"
+    "%jars ../../../jars/tribuo-clustering-hdbscan-4.3.0-jar-with-dependencies.jar"
    ]
   },
   {
@@ -52,6 +52,8 @@
     "import org.tribuo.data.columnar.processors.response.EmptyResponseProcessor;\n",
     "import org.tribuo.data.csv.CSVDataSource;\n",
     "import org.tribuo.data.csv.CSVLoader;\n",
+    "import org.tribuo.math.distance.DistanceType;\n",
+    "import org.tribuo.math.neighbour.NeighboursQueryFactoryType;\n",
     "import org.tribuo.util.Util;"
    ]
   },
@@ -102,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var trainer = new HdbscanTrainer(8, HdbscanTrainer.Distance.EUCLIDEAN, 8, 2);\n",
+    "var trainer = new HdbscanTrainer(8, DistanceType.L2.getDistance(), 8, 2, NeighboursQueryFactoryType.KD_TREE);\n",
     "var model = trainer.train(dataset);"
    ]
   },
