--- a/notebooks/Data Setup/Copy Hdbscan Jars.ipynb
+++ b/notebooks/Data Setup/Copy Hdbscan Jars.ipynb
@@ -6,27 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../../other/copy_jars.sh"
+    "!../../other/copy_jars.sh\n",
+    "# !../../other/copy_snapshot_jars.sh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 36584\r\n",
-      "drwxr-xr-x   8 gstewart  staff      256 Mar 14 21:55 \u001b[34m.\u001b[m\u001b[m\r\n",
-      "drwxr-xr-x  11 gstewart  staff      352 Jan 21 14:50 \u001b[34m..\u001b[m\u001b[m\r\n",
-      "-rw-r--r--@  1 gstewart  staff     6148 Nov 29 21:51 .DS_Store\r\n",
+      "total 16456\r\n",
+      "drwxr-xr-x   8 gstewart  staff      256 Dec  1 06:36 \u001b[34m.\u001b[m\u001b[m\r\n",
+      "drwxr-xr-x  11 gstewart  staff      352 Mar 16  2022 \u001b[34m..\u001b[m\u001b[m\r\n",
+      "-rw-r--r--@  1 gstewart  staff     6148 Dec  1 06:36 .DS_Store\r\n",
       "-rw-r--r--   1 gstewart  staff   174598 Sep 10  2021 junit-jupiter-api-5.7.0.jar\r\n",
       "-rw-r--r--   1 gstewart  staff    99606 Jul 14  2021 junit-platform-commons-1.7.1.jar\r\n",
+      "-rw-r--r--   1 gstewart  staff   230363 Jul 14  2021 opencsv-5.4.jar\r\n",
       "-rw-r--r--   1 gstewart  staff     7653 Jul 14  2021 opentest4j-1.2.0.jar\r\n",
-      "-rw-r--r--   1 gstewart  staff  8996892 Jan 21 14:50 tribuo-clustering-hdbscan-4.2.0-SNAPSHOT-jar-with-dependencies.jar\r\n",
-      "-rw-r--r--   1 gstewart  staff  9007670 Mar 15 15:26 tribuo-clustering-hdbscan-4.3.0-SNAPSHOT-jar-with-dependencies.jar\r\n"
+      "-rw-r--r--   1 gstewart  staff  7895344 Dec  1 06:35 tribuo-clustering-hdbscan-4.3.0-jar-with-dependencies.jar\r\n"
      ]
     }
    ],
