--- a/notebooks/Compare Performance/Gaussians 50000/Tribuo Predictions Performance Gaussians50000.ipynb
+++ b/notebooks/Compare Performance/Gaussians 50000/Tribuo Predictions Performance Gaussians50000.ipynb
@@ -16,7 +16,7 @@
     "%jars ../../../jars/junit-jupiter-api-5.7.0.jar\n",
     "%jars ../../../jars/opentest4j-1.2.0.jar\n",
     "%jars ../../../jars/junit-platform-commons-1.7.1.jar\n",
-    "%jars ../../../jars/tribuo-clustering-hdbscan-4.2.0-SNAPSHOT-jar-with-dependencies.jar"
+    "%jars ../../../jars/tribuo-clustering-hdbscan-4.3.0-jar-with-dependencies.jar"
    ]
   },
   {
@@ -52,6 +52,8 @@
     "import org.tribuo.data.columnar.processors.response.EmptyResponseProcessor;\n",
     "import org.tribuo.data.csv.CSVDataSource;\n",
     "import org.tribuo.data.csv.CSVLoader;\n",
+    "import org.tribuo.math.distance.DistanceType;\n",
+    "import org.tribuo.math.neighbour.NeighboursQueryFactoryType;\n",
     "import org.tribuo.util.Util;"
    ]
   },
@@ -102,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var trainer = new HdbscanTrainer(10, HdbscanTrainer.Distance.EUCLIDEAN, 10, 8);\n",
+    "var trainer = new HdbscanTrainer(10, DistanceType.L2.getDistance(), 10, 8, NeighboursQueryFactoryType.BRUTE_FORCE);\n",
     "var model = trainer.train(dataset);"
    ]
   },
@@ -139,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting took (00:00:00:280)\n"
+      "Predicting took (00:00:00:168)\n"
      ]
     }
    ],
